2001-10-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Transaction.{ch} (xaccTransVoid), (xaccTransGetVoidStatus),
	(xaccTransGetVoidReason), (xaccSplitVoidFormerAmount): new functions.

	* src/engine/kvp_doc.txt: add new entries related to transaction voiding.

2001-09-30  Josh Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c: Displays
	auto-created-and-notification-requested scheduled transactions in
	a GL rather than a clist.

	* src/register/ledger-core/split-register-model.c
	(gnc_template_register_model_new): Added date-cell entry/io-flags
	handler for template register, making date cell inactive, and
	stating "Scheduled" instead of a date.

	* src/gnome/dialog-sxsincelast.c (_create_transactions_on): Now
	does appropriate cleanup in the case it needs to create a
	temporary toCreateTuple for transaction-creation.
	(_create_each_transaction_helper): Cleanup failed
	transaction-creation appropriately.  Support for returning a list
	of the GUIDs of created transactions.

2001-09-28  Robert Graham Merkel  <rgmerk@mira.net>

	* src/app-utils/date-utilities.scm ((gnc:deltasym-to-delta)): new function
	to convert datedelta symbols to the actual deltas.

	* src/app-utils/app-utils.scm: export gnc:deltasym-to-delta

	* src/report/standard-reports/net-barchart.scm (etc.): replace eval usage
	with gnc:deltasym-to-delta

2001-09-21  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/SchedXaction.c: fix split account bugs.

	* src/gnome/dialog-sx-from-trans.c: fix freqspec bugs.

2001-09-14  Dave Peticolas  <dave@krondo.com>

	* src/register/register-gnome: add new headers

	* src/register/register-gnome/gncmod-register-gnome.c: initialize
	gnome-specific cells and table

	* src/register/register-gnome/pricecell-gnome.c
	(gnc_price_cell_gnome_new): new func.

	* src/register/register-gnome/quickfillcell-gnome.c
	(gnc_quickfill_cell_gnome_new): new func

	* src/register/register-gnome/table-gnome.c: new code to